--- a/styles.css
+++ b/styles.css
@@ -45,7 +45,7 @@ body {
 #modal1_up {
     height: 35%;
     width: 50%;
-    background-image: url(button.png);
+    background-image: url(textures/button.png);
     background-size: 100% 100%;
     background-repeat: no-repeat;
     display: flex;
@@ -69,7 +69,7 @@ body {
 .buttonDiv {
     width: 40%;
     height: 30%;
-    background-image: url(button2.png);
+    background-image: url(textures/button2.png);
     background-size: 100% 100%;
     background-repeat: no-repeat;
 }
@@ -77,7 +77,7 @@ body {
 .buttonDiv2 {
     width: 30%;
     height: 35%;
-    background-image: url(button4.png);
+    background-image: url(textures/button4.png);
     background-size: 100% 100%;
     background-repeat: no-repeat;
 }
@@ -85,7 +85,7 @@ body {
 .buttonRulesDiv {
     width: 35%;
     height: 50%;
-    background-image: url(button5.png);
+    background-image: url(textures/button5.png);
     background-size: 100% 100%;
     background-repeat: no-repeat;
     display:flex;
@@ -147,7 +147,7 @@ body {
 #modal2_middle {
     height: 30%;
     width: 50%;
-    background-image: url(button3.png);
+    background-image: url(textures/button3.png);
     background-size: 100% 100%;
     background-repeat: no-repeat;
     display: flex;
@@ -175,7 +175,7 @@ body {
     left: 25vw; 
     position: absolute;
     z-index: 200;
-    background-image: url(button6.png);
+    background-image: url(textures/button6.png);
     background-size: 100% 100%;
     background-repeat: no-repeat;
     display: none;
@@ -208,7 +208,7 @@ body {
 #restart_ {
     position: absolute;
     z-index: 200;
-    background-image: url(button6.png);
+    background-image: url(textures/button6.png);
     background-size: 100% 100%;
     background-repeat: no-repeat;
     height: 30vh;
@@ -258,7 +258,7 @@ body {
 }
 
 #canvasCurtain {
-    background-image: url(canvas_background.png);
+    background-image: url(textures/canvas_background.png);
     background-size: 100% 100%;
     background-repeat: no-repeat;
     position: absolute;
