--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,38 @@ body {
     color:rgb(50, 50, 50);
 }
 
+
+#loading-screen {
+    overflow: hidden;
+    min-width: 100%;
+    height: 100vh;
+    background: rgb(5, 5, 99);
+    place-items: center;
+    display: grid;
+    z-index: 1000;
+}
+
+#loadbar-container {
+    width: 25vw;
+    height: 3vh;
+    border: solid white 2px;
+}
+#loadbar-container::before{
+    content: 'Loading...';
+    color: white;
+    transform: translate(100%, -130%);
+    font-size: 1.5rem;
+    position: absolute;
+}
+
+#loadbar{
+    height: 100%;
+    width: 0%;
+    background: rgb(24, 202, 251);
+}
+
+
+
 #modal1 {
     height: 80vh;
     width: 80vw;
