--- a/styles.css
+++ b/styles.css
@@ -30,29 +30,30 @@ body {
     overflow: hidden;
     min-width: 100%;
     height: 100vh;
-    background: rgb(5, 5, 99);
-    place-items: center;
-    display: grid;
+    background: rgb(187, 243, 255);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
     z-index: 1000;
 }
 
 #loadbar-container {
-    width: 25vw;
+    width: max(27vw, 200px);;
     height: 3vh;
-    border: solid white 2px;
+    border: solid black 2px;
 }
-#loadbar-container::before{
-    content: 'Loading...';
-    color: white;
-    transform: translate(100%, -130%);
+#loading-text{
+    color: black;
     font-size: 1.5rem;
-    position: absolute;
+    margin-right: 3vw;
+    margin-bottom: 0.5vh;
 }
 
 #loadbar{
     height: 100%;
-    width: 0%;
-    background: rgb(24, 202, 251);
+    width: 10%;
+    background: rgb(24, 92, 251);
 }
 
 
