--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,6 @@
 @font-face {
     font-family: Life;
     src: url(Life.ttf);
-
 }
 
 body {
@@ -25,7 +24,7 @@ body {
     color:rgb(50, 50, 50);
 }
 
-
+/* LOADING SCREEN */
 #loading-screen {
     overflow: hidden;
     min-width: 100%;
@@ -55,9 +54,10 @@ body {
     width: 10%;
     background: rgb(24, 92, 251);
 }
+/* END LOADING SCREEN */
 
 
-
+    /* LANGUAGE CHOICE MODAL */
 #modal1 {
     height: 80vh;
     width: 80vw;
@@ -70,9 +70,6 @@ body {
     justify-content: center;
     align-items: center;
     background: transparent;
-
- 
-
 }
 
 #modal1_up {
@@ -89,7 +86,6 @@ body {
     text-align: center;
 }
 
-
 #modal1_down {
     height: 40%;
     width: 62%;
@@ -97,8 +93,12 @@ body {
     justify-content: center;
     background: transparent;
 }
+/* END LANGUAGE CHOICE MODAL */
 
 
+/* ***BUTTONS */
+
+    /* blue; first modal and input */
 .buttonDiv {
     width: 40%;
     height: 30%;
@@ -106,7 +106,7 @@ body {
     background-size: 100% 100%;
     background-repeat: no-repeat;
 }
-
+    /* green; second modal only */
 .buttonDiv2 {
     width: 30%;
     height: 35%;
@@ -114,9 +114,9 @@ body {
     background-size: 100% 100%;
     background-repeat: no-repeat;
 }
-
+    /* orange round; rules buttons and all restart buttons */
 .buttonRulesDiv {
-    width: 35%;
+    width: 30%;
     height: 50%;
     background-image: url(textures/button5.png);
     background-size: 100% 100%;
@@ -126,6 +126,7 @@ body {
     align-items: center;
 }
 
+    /* basic button; transparent */
 .button {
     width: 100%;
     height: 100%;
@@ -140,6 +141,7 @@ body {
     background: rgba(24, 24, 24, 0.04);
 }
 
+    /* round button; transparent */
 .button1 {
     width: 92%;
     height: 90%;
@@ -155,10 +157,14 @@ body {
 .button1:hover {
     background: rgba(24, 24, 24, 0.04);
 }
+/* END BUTTONS */
+
+
+    /* DIFFICULTY CHOICE MODAL */
 #modal2 {
     height: 80vh;
     width: 80vw;
-    top: 10vh; 
+    top: 15vh; 
     left: 10vw; 
     position: absolute;
     z-index: 99;
@@ -170,14 +176,14 @@ body {
 }
 
 #modal2_up {
-    height: 30%;
+    height: 20%;
     width: 50%;
     background: transparent;
     display: flex;
     justify-content: center;
     align-items: flex-end;
-    font-size: 2rem;
 }
+
 #modal2_middle {
     height: 30%;
     width: 50%;
@@ -190,7 +196,6 @@ body {
     font-size: 1.9rem;
     flex-direction: column;
     margin: 1px;
-    
 }
 
 #modal2_down {
@@ -200,8 +205,9 @@ body {
     justify-content: center;
     background: transparent;
 }
+/* END DIFFICULTY CHOICE MODAL */
 
-
+/* RULES EXPLANATION MODAL */
 #modal_rules {
     height: 70vh;
     width: 50vw;
@@ -218,7 +224,6 @@ body {
     flex-direction: column;
 }
 
-
 #modal_rules1 {
     height: 70%;
     width: 100%;
@@ -227,9 +232,9 @@ body {
     justify-content: center;
     align-items: center;
     text-align: center;
-    font-size: 3rem;
-    font-size: 2rem;
+    font-size: inherit;
 }
+
 #modal_rules2 {
     height: 30%;
     width: 100%;
@@ -238,23 +243,36 @@ body {
     justify-content: center;
     align-items: center;
 }
+/* END RULES EXPLANATION MODAL */
 
-#restart_ {
+
+/* AFTER LOOSING CONTENT */
+#restart_main {
     position: absolute;
     z-index: 200;
+    height: 90vh;
+    width: 90vw;
+    top: 5vh;
+    left: 5vw;
+    display: none;
+    flex-direction: column;
+    align-items: center;
+}
+
+/* RESTART TOP MODAL */
+#restart_ {
     background-image: url(textures/button6.png);
     background-size: 100% 100%;
     background-repeat: no-repeat;
-    height: 30vh;
-    width: 40vw;
-    top: 25vh; 
-    left: 30vw; 
-    display: none;
+    height: 35%;
+    width: 40%;
+    top: 5%; 
+    left: 30%;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    display: flex;
 }
-
 #restart_question {
     height: 40%;
     width: 100%;
@@ -263,18 +281,155 @@ body {
     justify-content: center;
     align-items: center;
     text-align: center;
-    font-size: 2rem;
+    font-size: inherit;
     margin-top: 5%;
-
 }
 #restart_button_space {
     height: 50%;
-    width: 80%;
+    width: 90%;
     background: transparent;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+/* END RESTART TOP MODAL */
+
+/* SCOREBOARD */
+#scoreboard-main{
+    width: 100%;
+    height: 65%;
+    background-image: url(textures/button.png);
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    display: flex;
+    opacity: 0;
+    -webkit-transition: opacity 0.7s;
+    -moz-transition: opacity 0.7s;
+    -o-transition: opacity 0.7s;
+    transition: opacity 0.7s;
+    flex-direction: column;
+    align-items: center;  
+}
+#scoreboard-title {
+    width: 100%;
+    height: 8%;
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 3%;
+    margin-bottom: 0.5%;
 }
+
+#difficulty-titles {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    font-size: 1.2rem;
+    width: 100%
+}
+
+#scoreboard-container{
+    width: 100%;
+    height: 66%;
+    display: flex;
+    justify-content: space-around;
+}
+
+.scoreboard {
+    min-width: 25%;
+    display: flex;
+    flex-direction: column;
+}
+
+.scoreboard-line{
+    width: 98%;
+    display: flex;
+    justify-content: space-between;
+    border-bottom: solid gray 1px;
+    flex-direction: row;
+    padding-left: 0.2rem;
+    padding-right: 0.2rem;
+    font-size: 1rem;
+}
+/* END SCOREBOARD */
+
+
+#savescore-dark {
+    position: absolute;
+    left: 0%;
+    top: 0%;
+    width: 100vw;
+    height: 100vh;
+    z-index: 250;
+    background: black;
+    opacity: 70%;
+    display: none;
+}
+
+/* REQUEST NAME AND SAVE SCORE MODAL */
+#savescore-main {
+    width: 40%;
+    height: 35%;
+    z-index: 300;
+    background-image: url(textures/button6.png);
+    position: absolute;
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    display: none;
+    align-items: center;
+    flex-direction: column;
+    opacity: 100%;
+    margin-bottom: 7vh;
+    row-gap: 5%;
+}
+
+#savescore-text {
+    width: 90%;
+    height: 20%;
+    /* border: solid green 2px; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 3%;
+}
+
+#savescore-input-container {
+    width: 90%;
+    height: 20%;
+    /* border: solid rgb(73, 0, 128) 2px; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 0;
+}
+#savescore-send-container {
+    width: 100%;
+    height: 30%;
+    /* border: solid rgb(128, 0, 70) 2px; */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 0;
+}
+#name {
+    border: none;
+    outline: none;
+    background-color: transparent;
+    background-image: url(textures/button2.png);
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+    width: 80%;
+    padding-left: 5%;
+    padding-right: 5%;
+    padding-top: 3%;
+    padding-bottom: 3%;    
+}
+
+#button-savescore-final-div {
+    height: 80%;
+}
+/* END REQUEST NAME AND SAVE SCORE MODAL */
+
 #dark {
     position: absolute;
     left: 0%;
