--- a/public/styles.css
+++ b/public/styles.css
@@ -651,7 +651,7 @@ body {
 }
 
 #canvasCurtain {
-    background-image: url(textures/canvas_background.png);
+    background-image: url(textures/canvas_background.jpg);
     background-size: 100% 100%;
     background-repeat: no-repeat;
     position: absolute;
